# file-organizer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: rules.yaml
src/file_organizer/: config.py  logging.py  main.py  models.py  organizer.py  reporter.py  scanner.py
tests/: test_cli.py  test_config.py  test_organizer.py  test_reporter.py  test_scanner.py
